# pb/fxgateway.swagger.json
@@ -15,6 +15,32 @@
     "application/json"
   ],
   "paths": {
+    "/api/list": {
+      "post": {
+        "operationId": "List",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/pbFunctions"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/pbTokenRequest"
+            }
+          }
+        ],
+        "tags": [
+          "FxGateway"
+        ]
+      }
+    },
     "/healthz": {
       "get": {
         "operationId": "HealthCheck",
@@ -102,20 +128,6 @@
       }
     },
     "/system/functions": {
-      "get": {
-        "operationId": "List",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/pbFunctions"
-            }
-          }
-        },
-        "tags": [
-          "FxGateway"
-        ]
-      },
       "post": {
         "operationId": "Deploy",
         "responses": {
@@ -344,6 +356,14 @@
         "Replicas": {
           "type": "string",
           "format": "uint64"
+        }
+      }
+    },
+    "pbTokenRequest": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string"
         }
       }
     }
